Added LICENSE to install files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,11 @@ install(TARGETS inkyuserspace-shared
 
 install(TARGETS pimoroni-inky-driver
   PUBLIC_HEADER
-  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${CMAKE_PROJECT_NAME}
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
   PRIVATE_HEADER
-  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${CMAKE_PROJECT_NAME})
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
+
+# Install share files
+
+install(FILES LICENSE
+  DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME})
